# Linera-Passport-NFT-Buildathon-

./: .gitignore  BUILDATHON_FIX_PLAN.md  BUILDATHON_SUBMISSION.md  CROSS_CHAIN_FEATURE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FRONTEND_QUICK_START.md  FRONTEND_URLS.md  HACKATHON_HIGHLIGHTS.md  PHASE2_ROADMAP.md  README.md  README_NEW_FRONTEND.md  deploy.sh  frontend.html  publish.sh  setup-oracle.sh  start-frontend.sh  test-score-api.sh  НОВЫЙ_ФРОНТ_SUMMARY.md
config/: achievements.json
passport-nft-agent/: Cargo.toml  README.md  add_mint_method.patch  config.toml.example  run-agent.sh
passport-nft-agent/config/: achievements.json
passport-nft-agent/src/: chain_client.rs  config.rs  lib.rs  llm.rs  scoring.rs  scoring_llm.rs  updater.rs
src/: contract.rs  contract.rs.before_admin_fix  error.rs  lib.rs  query.rs  service.rs  state.rs  token.rs
web-frontend/: README.md  next.config.mjs  package-lock.json  package.json
web-frontend/app/: layout.tsx  page.tsx
web-frontend/components/: floating-particles.tsx  leaderboard.tsx  passport-card.tsx  wallet-button.tsx
web-frontend/lib/: demo-wallet.ts  linera-mutations.ts
web-frontend/public/: demo-wallet.json
web-frontend/types/: passport.ts
